2013-11-21  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_main_025.f90 (default_hydro_bc): oops, evaporation should
	not be zeroed here

	* test/temperature/evaporation/mass2_v027.cfg: tighten the
	hydrodynamic solution to deal with precipitation

	* test/temperature/evaporation/bcspecs.dat: add precipitation

	* test/temperature/evaporation/cumulative_precip.dat: added

2013-03-29  William A. Perkins  <william.perkins@pnnl.gov>

	* temperature_source.f90 (temperature_source_timestep):
	DOH! Only advance thermal bed when there is one.

	* thermal_bed.f90 (thermal_bed_layers): added

	* test/temperature/pond/scalar_source.dat: try out a thermal bed

	* scalars_source.f90 (scalar_source_term): adjust for changes to
	temperature source term
	(scalar_source_timestep): advance temperature (bed)

	* temperature_source.f90 (temperature_parse_options): read bed
	related phrases and create thermal bed if called for
	(temperature_source_term): use thermal bed if called for
	(temperature_source_timestep): advance thermal bed state

	* gage_output_module.f90 (gage_print_text): write out bed
	temperatures if thermal bed is enabled

	* diffusive_bed.f90 (diffusive_bed_layers): added

	* Makefile.am (mass2_SOURCES): add thermal_bed.f90 and
	diffusive_bed.f90 

2013-03-28  William A. Perkins  <william.perkins@pnnl.gov>

	* diffusive_bed_test.f90 (diffusive_bed_test): make this test
	match thermal_bed_test 

2013-03-27  William A. Perkins  <william.perkins@pnnl.gov>

	* thermal_bed_test.f90 (thermal_bed_test): add

	* thermal_bed.f90 (thermal_bed): add

	* diffusive_bed_test.f90 (diffusive_bed_test): compute the water
	phi with a sine function

	* diffusive_bed.f90 (solveit): use zero gradient BC at bottom 

	* Makefile.am (check_PROGRAMS): add diffusive_bed_test

	* diffusive_bed_test.f90, diffusive_bed.f90: add

	* gastemp/energy_flux_module.f90 (latent_heat): correct formula

2013-03-18  William A. Perkins  <william.perkins@pnnl.gov>
