@@ -19,14 +19,14 @@ F F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial wat
 2			number_scalar_iterations
 5			scalar_sweep	! internal iterations
 50			depth_sweep
-0.20001 F		eddy viscosity
+0.20001 F F 0.9		eddy viscosity
 0.20001 F		kx_diff		! diffusion coeff in xsi (ft^2/sec)
 0.50001 F		ky_diff		! diffusion coeff in eta (ft^2/sec)
 0.026 F			chezy_con	! manning n value if manning=TRUE
 1.49			mann_con	! constant in the bed shear stress  =1.0 if metric units, 1.49*1.49 for english
 0.40			relax_dp	! relaxation factor for depth corrections
-0.0			inlet_flow	! uniform inlet flow rate in non spill/non gen areas
-2.0			ds_elev		! downstream water elevation bc (feet) (changed from 638  CR 3/30/99
+0.7			relax_uv	! u/v underrelaxation
+UPWIND 0.0 1.0		diff_uv, blend_uv, blend_time	! u/v spatial differing schem
 0.2			uvel_initial	! initial uniform value of u velocity
 0.0			vvel_initial	! initial uniform value of v velocity
 0.0         conc_initial	! initial uniform value of concentration						
@@ -34,8 +34,8 @@ F F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial wat
 0.0			uvel_wind	! uniform value of u wind velocity
 0.0			vvel_wind	! uniform value of v wind velocity
 F 0.0 0.0 0.0            ! do wet/dry, dry depth, rewet depth, zero depth
-0.4 0.0 F 1	bed porosity, initial bed depth, read from initial_bed.dat, bed iterations
+0.4 0.1 F 1	bed porosity, initial bed depth, read from initial_bed.dat, bed iterations
 50000 F		print_freq  	! printout frequency
 T T F               ! netcdf plot output, ouput flow diag, output flow (in transport only)
-F F T 999999        ! cgns plot output, cell centered, field descriptions, times per file
+T T T 999999        ! cgns plot output, cell centered, field descriptions, times per file
 30			gage_print_freq
