@@ -5,8 +5,10 @@
     SETVEL      5.0e-02     DSHEAR  0.030
     ERODIBILTY  9.3E-07     ESHEAR  0.060 /
 2 GEN "stuff" "Transported Stuff" "kg/m^3" 
+    RELAX 0.7
     CONVERT 0.028317 /
 3 PART "particulate" "Particulate Stuff" "kg/m^3" 
+    RELAX 0.7
     CONVERT 0.028317 
     KD 0.5 
     BEDKD 0.005 
