@@ -10,7 +10,7 @@
 # Last Change: Tue Apr  8 13:39:23 2003 by William A. Perkins <perk@leechong.pnl.gov>
 # -------------------------------------------------------------
 
-MODEL = ../../../mass2_v027
+MODEL = ../../../mass2
 
 EPSFILES = \
 	plot-sed.eps \
