@@ -7,7 +7,7 @@
 # -------------------------------------------------------------
 # -------------------------------------------------------------
 # Created February 14, 2002 by William A. Perkins
-# Last Change: Wed Mar 24 11:48:28 2004 by William A. Perkins <perk@leechong.pnl.gov>
+# Last Change: 2014-06-04 15:31:42 d3g096
 # -------------------------------------------------------------
 
 MODEL = ../../../mass2
@@ -29,22 +29,22 @@ MODELFILES = \
 	stuff-bc.dat \
 	zero.dat
 
+.PHONY: all nodecay decay
+
 all: $(EPSFILES)
 
-plot-nodecay.nc: $(MODELFILES) $(MODEL)
+nodecay: $(MODELFILES) $(MODEL)
 	cp scalar_source.base scalar_source.dat
 	$(MODEL)
-	mv plot.nc $@
 
-plot-decay.nc: $(MODELFILES) $(MODEL)
+decay: $(MODELFILES) $(MODEL)
 	sed -e '9s/0.0/1.584E-04/' scalar_source.base > scalar_source.dat
 	$(MODEL)
-	mv plot.nc $@
 
-plot-conc-nodecay.eps: plot-conc.gp plot-nodecay.nc
+plot-conc-nodecay.eps: nodecay plot-conc.gp 
 	sed -e 's/plot\.nc/plot-nodecay.nc/' plot-conc.gp | gnuplot > $@
 
-plot-conc-decay.eps: plot-conc.gp plot-decay.nc
+plot-conc-decay.eps: decay plot-conc.gp
 	sed -e 's/plot\.nc/plot-decay.nc/' plot-conc.gp | gnuplot > $@
 
 
