@@ -36,6 +36,6 @@ UPWIND 0.0 0.0		diff_uv, blend_uv, blend_time	! u/v spatial differing scheme and
 F 0.0 0.0 0.0            ! do wet/dry, dry depth, rewet depth, zero depth
 0.4 0.0	F 1		bed porosity, initial bed depth, read from initial_bed.dat, bed iterations
 10	F		print_freq  	! printout frequency
-T T F               ! netcdf plot output, ouput flow diag, output flow (in transport only)
-F F T 999999        ! cgns plot output, cell centered, field descriptions, times per file
+F T F               ! netcdf plot output, ouput flow diag, output flow (in transport only)
+T F T 999999        ! cgns plot output, cell centered, field descriptions, times per file
 10			gage_print_freq
